--- a/config/deploy.production.yml
+++ b/config/deploy.production.yml
@@ -27,6 +27,9 @@ env:
     - STRIPE_PUBLISHABLE_KEY
     - STRIPE_WEBHOOK_SECRET
   clear:
+    # Set the host for URL generation (production environment)
+    APP_HOST: churchneeds.net
+    
     # Standard production Puma configuration for 1GB RAM
     WEB_CONCURRENCY: 2
     RAILS_MAX_THREADS: 5
